--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Receiving schedules notification in Google Calendar (Slackbot)",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "dev": "doppler run -- nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -16,9 +17,11 @@
   "dependencies": {
     "@slack/events-api": "^3.0.1",
     "@slack/web-api": "^6.9.0",
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^126.0.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
