--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@slack/bolt": "^3.14.0",
     "@slack/events-api": "^3.0.1",
     "@slack/web-api": "^6.9.0",
     "cors": "^2.8.5",
