--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.18.2",
     "googleapis": "^126.0.1",
     "morgan": "^1.10.0",
+    "mysql2": "^3.6.1",
+    "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
