--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "googleapis": "^126.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
+    "node-schedule": "^2.1.1",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   },
