--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "calerdarbot",
-  "version": "1.0.0",
+  "name": "schdule-helper",
+  "version": "0.1.0",
   "description": "Receiving schedules notification in Google Calendar (Slackbot)",
   "main": "app.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/donghyeun02/calendarBot.git"
+    "url": "git+https://github.com/donghyeun02/schedule-helper.git"
   },
   "keywords": [],
   "author": "",
