--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@slack/web-api": "^6.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "googleapis": "^126.0.1",
     "morgan": "^1.10.0",
