--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
     "node-schedule": "^2.1.1",
+    "path": "^0.12.7",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   },
